# backtester_project

backtester_project/: README.md  pyproject.toml
backtester_project/src/backtester_project/core/: __init__.py  backtester.py  result.py  strategy.py
backtester_project/src/backtester_project/strategies/: __init__.py  buy_and_hold.py  mean_reversion.py  momentum.py
backtester_project/tests/: test_backtester.py  test_integration.py  test_result.py  test_strategy.py
